syntax = "proto3";

package stwartchain.feepolicy;

import "amino/amino.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "stwartchain/feepolicy/params.proto";
import "stwartchain/feepolicy/addresses.proto";
import "stwartchain/feepolicy/tariff.proto";
import "stwartchain/feepolicy/fees.proto";
import "stwartchain/feepolicy/tariffs.proto";

option go_package = "gitlab.stalwart.tech/ijio/main/backend/stwart-chain/x/feepolicy/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/stwart/feepolicy/params";
  
  }
  
  // Queries a list of Addresses items.
  rpc Addresses    (QueryGetAddressesRequest) returns (QueryGetAddressesResponse) {
    option (google.api.http).get = "/stwart/feepolicy/addresses/{id}";
  
  }
  rpc AddressesAll (QueryAllAddressesRequest) returns (QueryAllAddressesResponse) {
    option (google.api.http).get = "/stwart/feepolicy/addresses";
  
  }
  
  // Queries a list of Tariff items.
  rpc Tariff    (QueryGetTariffRequest) returns (QueryGetTariffResponse) {
    option (google.api.http).get = "/stwart/feepolicy/tariff/{denom}";
  
  }
  rpc TariffAll (QueryAllTariffRequest) returns (QueryAllTariffResponse) {
    option (google.api.http).get = "/stwart/feepolicy/tariff";
  
  }
  
  // Queries a list of Tariffs items.
  rpc Tariffs    (QueryGetTariffsRequest) returns (QueryGetTariffsResponse) {
    option (google.api.http).get = "/stwart/feepolicy/tariffs/{denom}";
  
  }
  rpc TariffsAll (QueryAllTariffsRequest) returns (QueryAllTariffsResponse) {
    option (google.api.http).get = "/stwart/feepolicy/tariffs";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

message QueryGetAddressesRequest {
  uint64 id = 1;
}

message QueryGetAddressesResponse {
  Address Addresses = 1 [(gogoproto.nullable) = false];
}

message QueryAllAddressesRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllAddressesResponse {
  repeated Address                             Addresses  = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetTariffRequest {
  string denom = 1;
}

message QueryGetTariffResponse {
  Tariff tariff = 1 [(gogoproto.nullable) = false];
}

message QueryAllTariffRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTariffResponse {
  repeated Tariff                                 tariff     = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetTariffsRequest {
  string denom = 1;
}

message QueryGetTariffsResponse {
  Tariffs tariffs = 1 [(gogoproto.nullable) = false];
}

message QueryAllTariffsRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllTariffsResponse {
  repeated Tariffs                                tariffs    = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetAddressByIDRequest {
  uint64 id = 1;
}

message QueryGetAddressRequest {
  string address = 1;
}

message QueryGetAddressResponse {
  Address Address = 1 [(gogoproto.nullable) = false];
}
